# wagtail-comments-report

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/tests/: __init__.py  conftest.py  settings.py  test_views.py  urls.py
src/wagtail_comments_report/: __init__.py  apps.py  views.py  wagtail_hooks.py
src/wagtail_comments_report/templates/wagtail_comments_report/: comments_report_results.html
